miawm button width fix

--- a/index.html
+++ b/index.html
@@ -126,16 +126,15 @@
                 data-bs-hover-animate="pulse"
                 href="#miawm"
                 style="
+                  display: block;
                   background-color: rgb(255, 255, 255);
                   opacity: 1;
                   filter: brightness(188%);
                   color: rgb(0, 0, 0);
                   font-size: 20px;
                   font-family: Montserrat, sans-serif;
-                  width: 485px;
                   background-position: center;
                   background-size: auto;
-                  height: 57px;
                 "
                 ><strong>TUDJ MEG TÖBBET!</strong></a
               >
