fix responsive view and header height

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       style="
         background: url('assets/img/bg-pattern.png'),
           linear-gradient(to left, #7b4397, #dc2430);
-        height: 100%;
+        height: 50%;
         background-image: url('assets/img/blue-smooth-wall-textured-background.jpg');
       "
     >
@@ -145,7 +145,7 @@
               <div class="device-mockup iphone6_plus portrait white">
                 <div
                   data-bs-hover-animate="pulse"
-                  class="device"
+                  class="device d-none d-md-block"
                   style="
                     background-image: url('assets/img/iphone_6_plus_white_port.png');
                   "
