--- a/index.html
+++ b/index.html
@@ -243,9 +243,13 @@
       <div class="container">
         <p>© White monkey 2022. All Rights Reserved.</p>
         <ul class="list-inline">
-          <li class="list-inline-item"><a href="#">Privacy</a></li>
-          <li class="list-inline-item"><a href="#">Terms</a></li>
-          <li class="list-inline-item"><a href="#">FAQ</a></li>
+          <li class="list-inline-item">
+            <a
+              target="_blank"
+              href="https://fabb8188-b69c-4cec-bf1e-055690fc23ae.usrfiles.com/ugd/fabb81_eb303bd222ee4bbfb1f24423fd1daa8f.pdf"
+              >Privacy</a
+            >
+          </li>
         </ul>
       </div>
     </footer>
