--- a/index.html
+++ b/index.html
@@ -49,15 +49,8 @@
           <i class="fa fa-bars"></i>
         </button>
         <div
-          class="collapse navbar-collapse"
-          id="navbarResponsive"
-          style="
-            background-image: url('assets/img/WM%20Header.png');
-            background-repeat: no-repeat;
-            background-size: contain;
-            background-position: left;
-            height: 22px;
-          "
+          id="wm-logo"
+          class="collapse navbar-collapse logo logo-white"
         >
           <ul class="nav navbar-nav ml-auto">
             <li class="nav-item" role="presentation">
