--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </head>
 
   <body id="page-top">
-    <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top d-none d-lg-block" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top"></a
         ><button
