--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>Home - Brand</title>
+    <title>WM-partnerek</title>
     <meta property="og:image" content="" />
     <meta property="og:type" content="website" />
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
