jelentkezz text update

--- a/index.html
+++ b/index.html
@@ -197,13 +197,18 @@
     >
       <div class="cta-content">
         <div class="container">
+          <div class="row">
+            <div class="col-md-6 mx-auto">          
           <h2>Ne várakozz<br />Jelentkezz!<br /></h2>
+          <p style="color:rgb(255, 255, 255); font-size: 26px">Küldj egy emailt nekünk egy rövid bemutatkozással és keresni fogunk!</p>
           <a
             class="btn btn-outline-warning btn-xl js-scroll-trigger"
             role="button"
             href="#kapcsolat"
             >Kapcsolat</a
           >
+          </div>
+          </div>
         </div>
       </div>
       <div class="overlay"></div>
