--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <section id="kapcsolat" class="contact bg-primary">
       <div class="container">
         <h2>
-          <span>Imádjuk</span><i class="fa fa-heart"></i
+          <span>Imádjuk&nbsp;</span><i class="fa fa-heart"></i
           ><span>&nbsp;az új barátokat!</span>
         </h2>
         <ul class="list-inline list-social">
