add dietetikus to the list

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               megfelelő szakemberekhez irányítjuk, egy előzetes felmérés után.
               Itt jössz <strong>Te</strong> a képbe! Folyamatosan vannak nyitott
               pozícióink<strong>
-                személyi edzőknek, coachoknak, lelki segítő szakembereknek. </strong
+                dietetikusoknak, személyi edzőknek, coachoknak, lelki segítő szakembereknek. </strong
               >De hagyjuk a felesleges köröket! Beszéljünk tisztán! Mit ajánl
               neked a WM, mi az ami különlegessé teszi? Gyakorlatilag nem kell
               ügyfélszerzéssel töltened az időd, mivel megtesszük helyetted
